--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,15 @@
     "@prisma/client": "^5.20.0",
     "@prisma/extension-accelerate": "^1.2.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "hono": "^4.6.3",
     "medium-common-app": "^1.0.0",
     "prisma": "^5.20.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
+    "@types/node": "^22.9.0",
+    "@types/nodemailer": "^6.4.16",
     "wrangler": "^3.57.2"
   }
 }
